--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,83 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#header {
+
+  width: 100%;
+
+  height: 80vh;
+
+  margin-top: 70px;
+
+}
+
+
+
+
+#header h1 {
+
+  margin: 0 0 10px 0;
+
+  font-size: 48px;
+
+  font-weight: 700;
+
+  color: black;
+
+}
+
+
+
+
+#header .brand-name {
+
+  color: #3498db;
+
+}
+
+
+
+
+#header h2 {
+
+  color: #484848;
+
+}
+
+
+
+
+#header .btn-book-now {
+
+  font-weight: 500;
+
+  font-size: 16px;
+
+  letter-spacing: 1px;
+
+  display: inline-block;
+
+  padding: 10px 30px;
+
+  border-radius: 50px;
+
+  transition: 0.3s;
+
+  color: #3498db;
+
+  text-decoration: none;
+
+}
+
+
+.header-img {
+
+  text-align: right;
+
+}
+
+#header .animated {
+  animation: ease-in-out infinite alternate-reverse both;
+
+}
